Ensure mobile nav displays when primary nav collapsed.

--- a/src/navigation/css/components/_honeycomb.navigation.components.header.scss
+++ b/src/navigation/css/components/_honeycomb.navigation.components.header.scss
@@ -659,6 +659,11 @@
     &--collapsed {
         height: 0 !important;
         overflow: hidden;
+
+        // Make overflow visible so that the mobile nav can be seen.
+        .mobile-nav--open & {
+            overflow: visible;
+        }
     }
 
     // MOBILE MENU.
